# spec-objects-security

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pyproject.toml
.agent/rules/: docker-dev.md  use_readme_and_makefile.md  writing_tests.md
.github/workflows/: ci.yml  release-npm.yml
scripts/: __init__.py  build_tools.py  stage-npm.mjs
spec/: index.md  spec.md  tests.md
spec/functional/: FR-001-module-manifest-activates.md  index.md
spec/integration/: IT-001-manifest-activation-roundtrip.md  index.md
spec/stakeholder/: StR-001-module-activation.md  index.md
spec_objects_security/: __init__.py  manifest.yaml
spec_objects_security/skeletons/: asset.md  attack_surface.md  audit_event.md  audit_finding.md  auth_flow.md  control.md  cors_policy.md  csrf_token.md  data_classification.md  encryption_key.md  jwt_claim.md  mfa_method.md  password_policy.md  permission.md  policy.md  risk.md  role.md  scope.md  secret.md  session_config.md  threat.md  trust_boundary.md  vulnerability.md
tests/: test_basic.py  test_manifest.py  test_skeletons_and_validate.py
